# packageguard

./: .env.example  .gitignore  Dockerfile.app  Dockerfile.sandbox  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml  setup.sh
demo/: demo_requirements.txt  demo_script.py
demo/attack_scenarios/credential_stealer/: setup.py
demo/attack_scenarios/credential_stealer/stealer/: __init__.py  utils.py
demo/attack_scenarios/install_hook/: setup.py
demo/attack_scenarios/pth_injection/: evil_pkg.pth  setup.py
demo/attack_scenarios/pth_injection/evil_pkg/: __init__.py
demo/attack_scenarios/safe_package/: setup.py
demo/attack_scenarios/safe_package/safe_pkg/: __init__.py  core.py
demo/demo_malicious_pkg/: create_demo.py
docs/: architecture.md  claude.md  codex.md
frontend/: index.html
packageguard/: __init__.py  __main__.py  config.py  main.py
packageguard/agents/: orchestrator.py  overmind_optimizer.py  security_agent.py
packageguard/api/: __init__.py  server.py
packageguard/cache/: __init__.py  aerospike_cache.py
packageguard/resolver/: __init__.py  dependency_resolver.py
packageguard/scanners/: __init__.py  dynamic_scan.py  llm_scan.py  metadata_scan.py  static_scan.py
packageguard/tracing/: __init__.py  overmind_tracer.py
tests/: test_compat_agent.py  test_security_agent.py
